src/index.css
:root {
  /* colors generated by coolors.co */
--light-green: #a7e38fff;
--citrine: #e3d815;
--atomic-tangerine: #f1ab86ff;
--brown-sugar: #c57b57ff;
--dark-spring-green: #157145ff;

--pale-yellow: #f0e7b2;
}

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.bold {
  font-weight: bold;
}

